policies/gatekeeper/constraints/require-trusted-image-digest.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sTrustedImageDigest
metadata:
  name: require-trusted-image-digest
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
      - apiGroups: ["batch"]
        kinds: ["Job", "CronJob"]
  parameters:
    repos:
      - ghcr.io/ignatius-kevin-wijaya/
